--- a/styles/main.css
+++ b/styles/main.css
@@ -12,7 +12,7 @@
 /* MAIN STYLES */
 
 body {
-    font-family: 'Public Sans', 'SF Pro' 'Segoe UI', 'Helvetiva Neue', 'Arial', sans-serif;
+    font-family: 'Public Sans', 'SF Pro', 'Segoe UI', 'Helvetiva Neue', 'Arial', sans-serif;
     padding: 0;
     margin: 0;
     line-height: 1.5em;
