--- a/styles/main.css
+++ b/styles/main.css
@@ -205,7 +205,6 @@ header {
     padding: 0 auto;
     display: flex;
     align-items: center;
-    text-transform: uppercase;
     font-weight: 600;
     padding: 3em;
 }
@@ -244,8 +243,7 @@ nav {
 }
 
 nav a {
-    font-size: 85%;
-    letter-spacing: 0.05em;
+    font-size: 16px;
     margin: 1em;
 }
 
