--- a/styles/main.css
+++ b/styles/main.css
@@ -247,6 +247,10 @@ nav a {
     margin: 1em;
 }
 
+nav a.active {
+    text-decoration: underline;
+}
+
 @media screen and (max-width: 640px) {
     nav {
         margin-top: 18px;
@@ -590,7 +594,7 @@ main {
 
 .intro {
     padding-bottom: calc(2vh + 1vw);
-    margin-top: 5em;
+    margin-top: 3em;
     min-height: 65vh;
 }
 
